--- a/app/templates/agenda/includes/event_linecard.html
+++ b/app/templates/agenda/includes/event_linecard.html
@@ -40,25 +40,19 @@
             </div>
             <div class="col-xs-6">
                 {% keywords_for event as tags %}
-                {% if event.departments.all.0 or tags %}
-                    <div class="event-line-box__tags">
-                        {% if event.departments.all.0 %}
-                            <div class="tag tag--small dashed">
-                              {{ event.departments.all.0.department.name }}
-                            </div>
-                        {% endif %}
-                        {% if event.category %}
-                            <div class="tag tag--small tag--category">
-                                {{ event.category }}
-                            </div>
-                        {% endif %}
+                <div class="event-line-box__tags">
+                    <div class="tag tag--small dashed">
+                        {% if event.departments.all %}{{ event.departments.all.0.department.name }}{% else %}{{ event.parent.departments.all.0.department.name }}{% endif %}
                     </div>
-                {% endif %}
+                    <div class="tag tag--small tag--category">
+                        {% if event.category %}{{ event.category }}{% else %}{{ event.parent.category }}{% endif %}
+                    </div>
+                </div>
                 <h3 class="event-line-box__title">
                     <a href="{{ event.get_absolute_url }}">{{ event.title }}</a>
                 </h3>
                 <div class="event-line-box__desc">
-                    {{ event.description|slice:":100" }}
+                    {% if event.description %}{{ event.description|slice:":100" }}{% else %}{{ event.parent.description|slice:":100" }}{% endif %}
                 </div>
             </div>
 
