--- a/static/src/sass/modules/_all.scss
+++ b/static/src/sass/modules/_all.scss
@@ -15,6 +15,7 @@
 @import 'boxes/person-list-box';
 @import 'boxes/event-line-box';
 @import 'boxes/job-line-box';
+@import 'boxes/product-box';
 
 // Sliders
 @import 'sliders/slider-page';
