--- a/templates/agenda/includes/event_metainfo_line.html
+++ b/templates/agenda/includes/event_metainfo_line.html
@@ -18,7 +18,7 @@
 
     {% if event.prices.all.0|floatformat != '0' and event.prices.all|length > 0 %}
         <p>
-            <a class="button button--small mt1" href="{% url 'event_booking' event.slug %}" class="event__meta__btn">
+            <a class="button mt1" href="{% url 'event_booking' event.slug %}" class="event__meta__btn">
                 {% trans "Reserve" %}
             </a>
         </p>
