--- a/templates/agenda/includes/event_card.html
+++ b/templates/agenda/includes/event_card.html
@@ -14,13 +14,23 @@
 {% endblock %}
 
 {% block image %}
-    <figure class="article-box__image">
-        {% with event.images.all|get_type:'card' as images %}
-            {% if images %}
+    {% with event.images.all|get_type:'card' as images %}
+        {% if images %}
+            <figure class="article-box__image">
                 <img src="data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw==" data-original="{{ MEDIA_URL }}{% thumbnail images.0.file 427 286 top=0.5 left=article.photo_alignment|get_photo_alignment %}" class="lazyload" />
-            {% endif %}
-        {% endwith %}
-    </figure>
+            </figure>
+        {% else %}
+            <figure class="article-box__image">
+                {% if event.departments.first %}
+                    {% with event.departments.first as department %}
+                        <div class="article-box__placeholder {{department.department.name|lower}}"></div>
+                    {% endwith %}
+                {% else %}
+                    <div class="article-box__placeholder"></div>
+                {% endif %}
+            </figure>
+        {% endif %}
+    {% endwith %}
 {% endblock %}
 
 {% block tags %}
