--- a/templates/home/inc/body.html
+++ b/templates/home/inc/body.html
@@ -12,6 +12,10 @@
                     {% with content.content_object as event %}
                         {% include "agenda/includes/event_card.html" %}
                     {% endwith %}
+                {% elif content.content_type.model == "custompage" %}
+                    {% with content.content_object as page %}
+                        {% include "pages/includes/page_card.html" %}
+                    {% endwith %}
                 {% endif %}
             </div>
         {% endfor %}
