--- a/templates/core/inc/block.html
+++ b/templates/core/inc/block.html
@@ -11,10 +11,11 @@
                     <div class="row" data-summary-content>
                         <div class="col-sm-9 col-sm-push-3 col-lg-8 col-lg-push-2">
                             <h2 class="dotted">{{ block.title }}</h2>
+                                {% if block.description %}
+                            <p>{{ block.description }}</p>
+                            {% endif %}
                             {% if block.content %}
                                  {{ block.content|richtext_filters|safe }}
-                            {% else %}
-                                {% lorem 3 p %}
                             {% endif %}
                         </div>
                     </div>
