--- a/static/src/sass/modules/_banner.scss
+++ b/static/src/sass/modules/_banner.scss
@@ -103,6 +103,7 @@ $module: ".banner";
 
         margin-top: 0;
         @include margin-bottom(2);
+        height: 150px;
 
         #{$module}__title {
 
