--- a/app/templates/agenda/event_list.html
+++ b/app/templates/agenda/event_list.html
@@ -111,6 +111,8 @@
                                 <a class="nav-tree__link active" href="{% url 'event_list' %}">
                                     {% if tag and tag|tag_is_excluded %}
                                         {% trans "Tournées" %}
+                                    {% elif is_archive %}
+                                        {% trans 'Archives' %}
                                     {% else %}
                                         {% trans "Rendez-vous" %}
                                     {% endif %}
@@ -122,6 +124,14 @@
                                     </li>
                                 </ul>
                             </li>
+
+                            {% if is_archive %}
+                                <li class="nav-tree__item">
+                                    <a class="nav-tree__link" href="{% url 'event_list' %}">
+                                        {% trans "Rendez-vous" %}
+                                    </a>
+                                </li>
+                            {% endif %}
 
                             {% if tag and tag|tag_is_excluded %}
                                 <li class="nav-tree__item">
@@ -137,7 +147,11 @@
                                 </li>
                             {% endif %}
 
-
+                            {% if not is_archive %}
+                                <li class="nav-tree__item">
+                                    <a class="nav-tree__link" href="{% url "event_list_year" CURRENT_SEASON %}" title="{% trans 'archive' %}">{% trans 'Archives' %}</a>
+                                </li>
+                            {% endif %}
 
                             {% if tag and not tag|tag_is_excluded or not tag and not is_archive %}
 
@@ -185,8 +199,6 @@
             </div>
 
         </div>
-        {% if not is_archive %}
-            <div><a href="{% url "event_list_year" CURRENT_SEASON %}" title="{% trans 'archive' %}">{% trans 'archive' %}</div>
-        {% endif %}
+
     </div>
 {% endblock %}
