--- a/app/templates/pages/menus/header_tree_secondary.html
+++ b/app/templates/pages/menus/header_tree_secondary.html
@@ -4,7 +4,7 @@
 {% spaceless %}
 {% if page_branch_in_menu %}
     {% for page in page_branch %}
-        {% if page.in_menu %}
+        {% if page.in_menu and page.in_menus|first %}
             <li class="nav-header__item-sub{% if page.is_current_or_ascendant %} active{% endif %}">
                 <a class="" href="{{ page.get_absolute_url }}" title="{{ page.title }}">{{ page.title }}</a>
             </li>
