--- a/templates/pages/menus/action.html
+++ b/templates/pages/menus/action.html
@@ -16,14 +16,14 @@
                 <a class="nav-actions__item-link" href="{{ page.get_absolute_url }}">{{ page.title }}</a>
             </li>
         {% endif %}
-        {% if page.is_primary %}
+        <!--{% if page.is_primary %}
             {% if forloop.last %}
                 <li class="nav-actions__item">
                     {% page_menu "pages/menus/vous_etes.html" %}
                 </li>
                 </ul>
             {% endif %}
-        {% endif %}
+        {% endif %}-->
     {% endfor %}
 {% endif %}
 {% endspaceless %}
