--- a/templates/magazine/brief/inc/brief_card.html
+++ b/templates/magazine/brief/inc/brief_card.html
@@ -1,8 +1,7 @@
 {% load i18n mezzanine_tags %}
 
-<div class="brief-box">
-    {{ content.content_object.style }}
-
+<div class="brief-box brief-box--{{ content.content_object.style }}">
+    
     <div class="brief-box__head">
         {% trans 'Brief !' %}
     </div>
