--- a/templates/pages/includes/page_search.html
+++ b/templates/pages/includes/page_search.html
@@ -8,7 +8,6 @@
 {% block icon %}files-o{% endblock %}
 
 {% block tags %}
-
     {% with page.get_ascendants|last as top_level_parent %}
         {% if top_level_parent.get_content_model.title %}
             <div class="event-line-box__tags">
@@ -20,6 +19,12 @@
             <div class="event-line-box__tags">
                 <div class="tag tag--small dashed">
                     {{ page.departmentpage.title }}
+                </div>
+            </div>
+        {% elif page|classname == "Project"  %}
+            <div class="event-line-box__tags">
+                <div class="tag tag--small dashed">
+                    {{ page|classname }}
                 </div>
             </div>
         {% else %}
